Improve Picture Viewer